--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -1,1 +1,27 @@
-<h1> oi </h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Home</title>
+</head>
+<body style="background-color: gray;">
+    <div class="container vh-100 justify-content-center align-items-center d-flex">
+        <div class="h-50 w-50 text-center" style="background-color: white; border-radius: 15px">
+            <br/>
+            <h1>Todo list</h1>
+            <br/>
+            <p>Organize suas tarefas</p>
+            <br/>
+            <div class="d-grid gap-2 col-6 offset-3">
+                <button type="button" class="btn btn-primary">Cadastro</button>
+                <button type="button" class="btn btn-primary">Login</button>
+            </div>
+                    
+        </div>
+    </div>
+    
+</body>
+</html> 
