--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -16,8 +16,8 @@
             <p>Organize suas tarefas</p>
             <br/>
             <div class="d-grid gap-2 col-6 offset-3">
-                <button type="button" class="btn btn-primary">Cadastro</button>
-                <button type="button" class="btn btn-primary">Login</button>
+                <a class="btn btn-primary" href={% url 'cadastro' %}>Cadastro</a>
+                <a class="btn btn-primary">Login</a>
             </div>
                     
         </div>
