--- a/users/templates/users/cadastro.html
+++ b/users/templates/users/cadastro.html
@@ -17,7 +17,7 @@
     </div>
     {% if status == '1' %}
         <div class="alert alert-danger mb-4 offset-1 col-10 text-center" role="alert">
-            Usuário ou login não podem ser vazios
+            Usuário ou email não podem ser vazios
         </div>
     {% elif status == '2' %}
         <div class="alert alert-danger mb-4 offset-1 col-10 text-center" role="alert">
