--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -18,6 +18,10 @@
         <div class="alert alert-danger mb-4 offset-1 col-10 text-center" role="alert">
             Usuário ou senha incorretos
         </div>
+    {% elif status == '2' %}
+        <div class="alert alert-success mb-4 offset-1 col-10 text-center" role="alert">
+            Cadastro realizado com sucesso
+        </div>
     {% endif %}
 {% endblock %}
 
